fix #DropdownMenuSubNavigator overflow

--- a/uber.css
+++ b/uber.css
@@ -395,7 +395,7 @@ nav#DropdownMenuSubNavigator {
     background: none;
     margin: 0 auto 50px;
     padding: 0;
-    width: 450px;
+    width: 460px;
 }
 
 #DropdownMenuSubNavigator .sf-menu > li {
